# Naaya

./: .gitignore  App.tsx  LUT_GUIDE_RAPIDE.md  Makefile  PERFORMANCE_OPTIMIZATION_GUIDE.md  TEST_DOCUMENTATION.md  app.json  babel.config.js  index.js  jest.config.js  jest.init.js  jest.setup.js  package-lock.json  package.json  react-native.config.js  test_lut.cube  test_lut_interface.js  tsconfig.json
__tests__/fixtures/: testData.ts
__tests__/integration/: ModulesIntegration.test.ts
__tests__/modules/: NativeAudioEqualizerModule.test.ts  NativeCameraFiltersModule.test.ts  NativeCameraModule.test.ts
__tests__/setup/: testSetup.ts
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/jni/: AudioEQBridge.cpp  CMakeLists.txt  OnLoad.cpp  VideoCaptureAndroid.cpp
backup/Audio.backup/: NativeAudioEqualizerModule.cpp  NativeAudioEqualizerModule.h  NativeAudioSpectrumModule.cpp  NativeAudioSpectrumModule.h  NativeAudioSpectrumModule.ts
backup/Audio.backup/core/: AudioEqualizer.cpp  AudioEqualizer.h  BiquadFilter.cpp
backup/Audio.backup/utils/: AudioBuffer.h  Constants.h
builds/: DistributionSummary.plist  ExportOptions.plist
builds/Naaya.xcarchive/: Info.plist
ios/: ExportOptions.plist  Podfile
ios/Naaya/: AppDelegate.swift  CameraManagerIOS.h  CameraManagerIOS.mm  CameraSessionBridge.h  CameraSessionBridge.mm  Info.plist  LaunchScreen.storyboard  Naaya.h  NaayaFrameProcessor.h  NaayaFrameProcessor.mm  NaayaPreviewManager.h  NaayaPreviewManager.mm  NaayaPreviewView.h  NaayaPreviewView.mm  NativeCameraModuleProvider.h  NativeCameraModuleProvider.mm  PermissionManagerIOS.h  PermissionManagerIOS.mm  PhotoCaptureIOS.h  PhotoCaptureIOS.mm  RCTModuleProviders.h  RCTModuleProviders.mm  VideoCaptureIOS.h  VideoCaptureIOS.mm
ios/Naaya.xcodeproj/: project.pbxproj  project.pbxproj.backup_v2  project.pbxproj.backup_v3
ios/Naaya.xcworkspace/: contents.xcworkspacedata
scripts/: clean-all-caches.sh  clean-and-restart.sh  clean_xcode_project.py  create_ipa.py  setup-ffmpeg-ios.sh
shared/: NativeAudioEqualizerModule.cpp  NativeAudioEqualizerModule.h  NativeCameraFiltersModule.cpp  NativeCameraFiltersModule.h  NativeCameraModule.cpp  NativeCameraModule.h  PerformanceBenchmark.h
shared/Audio/core/: AudioEqualizer.cpp  AudioEqualizer.h  BiquadFilter.cpp  BiquadFilter.h
shared/Audio/utils/: Constants.h
shared/Camera/capture/: PhotoCapture.cpp  PhotoCapture.hpp  VideoCapture.cpp  VideoCapture.hpp
shared/Camera/common/: FilterTypes.hpp  Types.hpp
shared/Camera/controls/: FlashController.cpp  FlashController.hpp  ZoomController.cpp  ZoomController.hpp
shared/Camera/core/: CameraManager.cpp  CameraManager.hpp
shared/Camera/filters/: FFmpegFilterProcessor.cpp  FFmpegFilterProcessor.hpp  FilterManager.cpp  FilterManager.hpp
shared/Camera/utils/: FrameBridge.hpp  PermissionManager.cpp  PermissionManager.hpp
specs/: NativeAudioEqualizerModule.ts  NativeCameraFiltersModule.ts  NativeCameraModule.ts
src/EQUALISER/: DOCUMENTATION.md  Example.tsx  Integration.tsx  ModernIntegration.tsx  README.md  index.ts
src/EQUALISER/components/: ConfigurationModal.tsx  EqualiserControls.tsx  EqualiserMain.tsx  FrequencyBandSlider.tsx  FrequencyResponseGraph.tsx  ModernControlPanel.tsx  ModernEqualiserMain.tsx  ModernFrequencySlider.tsx  ModernPresetSelector.tsx  ModernSpectrumVisualizer.tsx  PresetManager.tsx  SpectrumAnalyser.tsx  TenBandSliderRow.tsx  index.ts
src/EQUALISER/constants/: index.ts
src/EQUALISER/hooks/: useEqualiser.ts  useGestureHandler.ts
src/EQUALISER/services/: EqualiserService.ts
src/EQUALISER/types/: index.ts
src/audio/: README_MODERN_EQUALIZER.md  index.ts
src/audio/components/: AudioEqualizer.tsx  EqualizerButton.tsx  EqualizerControl.tsx  FrequencyBand.tsx  ModernAudioEqualizer.tsx  ModernFrequencyBand.tsx  ModernPresetSelector.tsx  ModernSpectrumVisualizer.tsx  PresetSelector.tsx  SpectrumAnalyzer.tsx  SpectrumVisualizer.tsx  index.ts
src/audio/constants/: index.ts  theme.ts
src/audio/examples/: EqualizerExample.tsx
src/camera/: index.ts
src/editeur/: TextEditor.tsx  TextIOModal.tsx  index.ts
src/optimization/: memory-management.tsx  react-performance.tsx
src/screens/: HomeScreen.tsx  LoginScreen.tsx  Navigator.tsx  ProfileScreen.tsx  README.md  RealCameraViewScreen.tsx  TeleprompterScreen.tsx  TextEditorScreen.tsx  index.ts  routeBus.ts  routes.ts
src/teleprompter/: TeleprompterControls.tsx  TeleprompterPlayer.tsx  TeleprompterView.tsx  constants.ts  hooks.ts  index.ts  styles.ts  types.ts
src/types/: shims.d.ts
src/ui/: ColorPickerModal.tsx  ColorPickerPopover.tsx  ConfigModal.tsx  CustomSlider.tsx  GlassScrollText.tsx  constants.ts
src/utils/: secureStorage.ts
src/videoLibrary/: index.ts  types.ts
(+100 files in other folders)
